feat: add db seed file

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,6 +6,9 @@
     ".": "./index.ts"
   },
   "private": true,
+  "prisma": {
+    "seed": "bun prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/pg": "^8.16.0",
