--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,23 @@ services:
       POSTGRES_DB: postgres
     volumes:
       - ./packages/db/prisma/data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  seed:
+    build:
+      context: .
+      dockerfile: packages/db/Dockerfile.seed
+    environment:
+      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/postgres
+    depends_on:
+      postgres:
+        condition: service_healthy
+    profiles:
+      - seed
 
 volumes:
   prisma:
